# scirs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_USAGE_POLICY.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  PERFORMANCE_BENCHMARKING.md  README.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  TODO.md  build.rs  clippy.toml  fix_into_shape.sh  gradient_clipping_standalone.rs  publish_one.sh  run_all_benchmarks.sh  rustfmt.toml  setup_lapack.sh  workspace-optimization.toml
benches/: Cargo.toml  README.md  compare_benchmarks.py  compare_results.py  linalg_benchmarks.rs  memory_efficiency.rs  networkx_benchmark_template.py  numerical_stability.rs  pytorch_benchmark.py  run_benchmarks.sh  run_benchmarks_and_compare.py  scipy_benchmark.py  scipy_comparison.py  scipy_comparison.rs  scipy_comprehensive_benchmark.py  tensorflow_benchmark.py
benches/ndimage/: rank_filter_bench.rs
benches/src/: lib.rs
scirs2/: Cargo.toml  README.md
scirs2-autograd/: CONTRIBUTING.md  Cargo.toml  ENHANCED_FEATURES.md  ENHANCEMENT_RECOMMENDATIONS.md  FIXED_ISSUES.md  GRADIENT_SHAPE_ISSUE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LINEAR_ALGEBRA_ENHANCEMENTS.md  LINEAR_ALGEBRA_SUMMARY.md  NOTES.md  README.md  TODO.md  fix_api.sh  test_decomp.rs  test_linalg_minimal.rs
scirs2-autograd/docs/: CHECKPOINTING.md  LINEAR_ALGEBRA_API.md  MATRIX_NORM_GRADIENTS.md  QUICK_REFERENCE.md
scirs2-autograd/examples/: array_test.rs  basic_autograd.rs  basic_operations.rs  basic_svd_test.rs  checkpoint_neural_network.rs  debug_norm_test.rs  enhanced_gradient_checkpointing.rs  enhanced_linalg_demo.rs  flexible_checkpointing.rs  forward_only_nn.rs  gradient_checkpointing.rs  linalg_aliases_demo.rs  linalg_performance.rs  linear_algebra_showcase.rs  matrix_inverse_test.rs  matrix_svd_test.rs  minimal_mm.rs  minimal_neural_network.rs  minimal_test.rs  qr_direct_test.rs  qr_simple_test.rs  shape_preservation_test.rs  shape_test.rs  simd_acceleration_test.rs  simple_checkpointing.rs  simple_neural_network.rs  simple_svd_test.rs  simplified_nn.rs  svd_gradient_test.rs  svd_larger_matrix_test.rs  svd_s_component_test.rs  svd_test.rs  test_conv2d_transpose.rs  test_debug.rs  test_decomp.rs  test_gradients.rs  test_jacobian.rs  test_jacobian_debug.rs  test_jacobian_fix.rs  test_jacobian_simple.rs  (+4 more)
scirs2-cluster/: ALGORITHM_COMPARISON.md  CHANGELOG.md  Cargo.toml  README.md  SUMMARY.md  TODO.md  build.rs
scirs2-core/: ARCHITECTURE_SCALING.md  ARRAY_PROTOCOL_PROGRESS.md  ARRAY_PROTOCOL_SESSION_SUMMARY.md  ARRAY_PROTOCOL_SUMMARY.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  ERROR_HANDLING_GUIDE.md  PARALLEL_ABSTRACTIONS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_OPERATIONS.md  PROGRESS.md  README.md  REFERENCE.md  TODO.md  WORK_SUMMARY.md  lib.rs
scirs2-datasets/: Cargo.toml  README.md  TODO.md  debug_ndarray_methods.rs  test_method_resolution.rs
scirs2-fft/: BATCH_IMPLEMENTATION_TODO.md  BENCHMARK_SUMMARY.md  CUDA_INTEGRATION_GUIDE.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  FINAL_CHECKS_SUMMARY.md  FRFT_IMPROVEMENT_REPORT.md  FRFT_NUMERICAL_ISSUES.md  GPU_ACCELERATION_ROADMAP.md  Makefile.toml  PERFORMANCE_ANALYSIS.md  PROGRESS.md  README.md  SPECTRAL_FLATNESS_TODO.md  TEST_FIX_SUMMARY.md  TODO.md  WORK_COMPLETE_SUMMARY.md  run_acceleration_benchmarks.sh  run_all_benchmarks.sh
scirs2-graph/: ALGORITHM_COMPLEXITY.md  API_STABILITY_ASSESSMENT.md  CHANGELOG.md  CROSS_PLATFORM_BUILD_VERIFICATION.md  Cargo.toml  PERFORMANCE_BENCHMARKS.md  README.md  TODO.md
scirs2-integrate/: BENCHMARKING_SUMMARY.md  Cargo.toml  FIXING_COMPILATION.md  IMPLEMENTATION_COMPLETE.md  ODE_MODULE_ORGANIZATION.md  ODE_REFACTOR_PLAN.md  README.md  TODO.md  build.rs
scirs2-interpolate/: API_DESIGN_GUIDE.md  Cargo.toml  FIXING_COMPILATION.md  README.md  TODO.md
scirs2-io/: Cargo.toml  README.md  TODO.md  compressed_data.h5  simple_data.h5  structured_data.h5
scirs2-linalg/: COMPLETION_SUMMARY.md  Cargo.toml  ISSUES.md  PERFORMANCE_GUIDE.md  README.md  TODO.md
scirs2-metrics/: Cargo.toml  IMPLEMENTATION_NOTES.md  PROGRESS.md  README.md  TODO.md  build.rs
scirs2-ndimage/: Cargo.toml  README.md  TODO.md  build_output.txt
scirs2-neural/: Cargo.toml  Cargo.toml.backup  Cargo.toml.minimal  MIGRATION_SUMMARY.md  NDARRAY_LINALG_MIGRATION.md  README.md  TODO.md  build.rs  test_stats_regression.rs
scirs2-optim/: Cargo.toml  GPU_ACCELERATION.md  README.md  TODO.md  build.rs  performance_config.json  performance_history.json  test  test_spatial_dropout.rs
scirs2-optimize/: Cargo.toml  README.md  TODO.md  bayesian_optimization_design.md  test_debug.rs  test_debug_hessian.rs  test_debug_multistart.rs
scirs2-series/: CONFIDENCE_INTERVALS_SUMMARY.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  LINEAR_ALGEBRA_MIGRATION.md  README.md  TODO.md
scirs2-signal/: Cargo.toml  PROGRESS.md  README.md  TODO.md  doc_tests_status.md  interpolation_comparison.csv  kalman_adaptive.csv  kalman_basic.csv  kalman_denoising.csv  kalman_ekf_measurement.csv  kalman_ekf_position.csv  kalman_ekf_velocity.csv  kalman_robust.csv  kalman_ukf_position.csv  kalman_ukf_velocity.csv  memory_efficient_spectrogram.csv  test_fixed_modules.sh  test_wvd.rs  verify_fixes.sh  window_analysis.csv
scirs2-sparse/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  TODO.md  rust_out
scirs2-spatial/: Cargo.toml  FINAL_STATUS.md  PERFORMANCE_VALIDATION_FINAL.md  README.md  TODO.md
scirs2-special/: API_REFERENCE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  MATHEMATICAL_FOUNDATIONS.md  PROGRESS.md  README.md  TODO.md  performance_config.toml  test_j1.rs  test_parabolic  test_parabolic.rs  test_value.rs
scirs2-stats/: API_CONSISTENCY_FINDINGS.md  API_STANDARDIZATION.md  Cargo.toml  README.md  TODO.md  regression.d  robust_regression_demo  robust_regression_demo.rs  simple_advanced_test
scirs2-text/: Cargo.toml  README.md  TODO.md  bpe_vocab.txt  my_model.w2v
scirs2-transform/: Cargo.toml  README.md  TODO.md
scirs2-vision/: Cargo.toml  README.md  TODO.md
(+4927 files in other folders)
