[workspace]
members = [
    "scirs2",
    "scirs2-core",
    "scirs2-linalg",
    "scirs2-integrate",
    "scirs2-interpolate",
    "scirs2-optimize",
    "scirs2-fft",
    "scirs2-stats",
    "scirs2-special",
    "scirs2-signal",
    "scirs2-sparse",
    "scirs2-spatial",
    # Advanced modules
    "scirs2-cluster",
    "scirs2-ndimage",
    "scirs2-io",
    "scirs2-datasets",
    # AI/ML modules
    "scirs2-neural",
    "scirs2-optim",
    "scirs2-graph",
    "scirs2-transform",
    "scirs2-metrics",
    "scirs2-text",
    "scirs2-vision",
    "scirs2-series",
    "scirs2-autograd",
]
resolver = "2"

[workspace.metadata.nox]
bench_crates = ["scirs2-ndimage"]

[workspace.package]
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "A Rust port of SciPy with AI/ML extensions - Scientific Computing and AI Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["scientific", "mathematics", "science", "scipy", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms", "ai"]

[workspace.dependencies]
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
ndarray-stats = "0.6.0"
ndarray-stats-05 = { package = "ndarray-stats", version = "0.5.0" }
ndarray-rand = "0.15.0"
ndarray-rand-014 = { package = "ndarray-rand", version = "0.14.0" }
num-traits = "0.2.19"
num-complex = "0.4.6"
num-integer = "0.1.46"
rayon = "1.10.0"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rand_chacha = "0.9.0"
thiserror = "2.0.12"
approx = "0.5.1"
criterion = "0.5.1"
wide = "0.7.32"  # SIMD acceleration library
once_cell = "1.19.0"
chrono = "0.4"
tempfile = "3.9"
serde_json = "1.0"
bincode = "1.3.3"

# Common dependencies for specific modules
nalgebra = "0.33.2"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
openblas-src = { version = "0.10.11", features = ["cblas", "lapacke"] }
blas = "0.23.0"
rustfft = { version = "6.2.0", default-features = false, features = [] }
argmin = "0.10.0"
sprs = "0.11.3"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
image = "0.24"
image-025 = { package = "image", version = "0.25", features = ["jpeg", "png", "gif"] }

# IO and file handling
flate2 = "1.0"
blake3 = "1.5"
regex = "1.10"
libc = "0.2"
cached = "0.48.1"
byteorder = "1.4"
rmp-serde = "1.1"
lz4 = "1.24"
zstd = "0.12"
bzip2 = "0.4"
sha2 = "0.10"
crc32fast = "1.3"
hex = "0.4"
digest = "0.10"
data-encoding = "2.4"
glob = "0.3"
zip = "0.6"
dirs = "5.0"

# ML specific
tokenizers = "0.15"
autograd = "1.1.1"
smallvec = "1.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
rustc-hash = "1.1.0"
matrixmultiply = "0.3.2"
num = "0.4.0"
special = "0.10.2"
special-11 = { package = "special", version = "0.11.4" }
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
lazy_static = "1.4"
statrs = "0.16.0"
petgraph = "0.6"
itertools = "0.13"

# BLAS specific - these are feature-gated in modules
blas-src = { version = "0.8", default-features = false }
intel-mkl-src = { version = "0.8.1", default-features = false }
cblas-sys = { version = "0.1.4", default-features = false }

# Additional dependencies for modules
half = { version = "2.4.0", features = ["num-traits", "serde", "alloc"] }
crossbeam-utils = { version = "0.8.19" }
crossbeam-deque = { version = "0.8.3" }
num_cpus = { version = "1.16.0" }
memmap2 = { version = "0.7.1" }
snap = { version = "1.1.0" }
cranelift-module = { version = "0.118.0" }
cranelift-jit = { version = "0.118.0" }
cranelift-frontend = { version = "0.118.0" }
plotly = { version = "0.12.1" }
plotters = { version = "0.3.5" }
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Math libraries
libm = "0.2"
array-init = "2.1.0"
netcdf3 = "0.5.2"
sobol = "1.0.2"
halton = "0.2.1"
ordered-float = "3.9.2"
kamadak-exif = "0.5"
friedrich = "0.5.0"
ureq = "2.9"
qhull = "0.4.0"
parking_lot = "0.12.1"
serde_yaml = "0.9"
toml = "0.8"
ciborium = "0.2"
serde_cbor = "0.11.2"

# Base scirs2 crates
scirs2-core = { version = "0.1.0-alpha.4", path = "./scirs2-core" }
scirs2 = { version = "0.1.0-alpha.4", path = "./scirs2", default-features = false }
scirs2-linalg = { version = "0.1.0-alpha.4", path = "./scirs2-linalg" }
scirs2-integrate = { version = "0.1.0-alpha.4", path = "./scirs2-integrate" }
scirs2-interpolate = { version = "0.1.0-alpha.4", path = "./scirs2-interpolate" }
scirs2-optimize = { version = "0.1.0-alpha.4", path = "./scirs2-optimize" }
scirs2-fft = { version = "0.1.0-alpha.4", path = "./scirs2-fft" }
scirs2-stats = { version = "0.1.0-alpha.4", path = "./scirs2-stats" }
scirs2-special = { version = "0.1.0-alpha.4", path = "./scirs2-special" }
scirs2-signal = { version = "0.1.0-alpha.4", path = "./scirs2-signal" }
scirs2-sparse = { version = "0.1.0-alpha.4", path = "./scirs2-sparse" }
scirs2-spatial = { version = "0.1.0-alpha.4", path = "./scirs2-spatial" }

# Advanced modules
scirs2-cluster = { version = "0.1.0-alpha.4", path = "./scirs2-cluster" }
scirs2-ndimage = { version = "0.1.0-alpha.4", path = "./scirs2-ndimage" }
scirs2-io = { version = "0.1.0-alpha.4", path = "./scirs2-io" }
scirs2-datasets = { version = "0.1.0-alpha.4", path = "./scirs2-datasets" }

# AI/ML modules
scirs2-neural = { version = "0.1.0-alpha.4", path = "./scirs2-neural" }
scirs2-optim = { version = "0.1.0-alpha.4", path = "./scirs2-optim" }
scirs2-graph = { version = "0.1.0-alpha.4", path = "./scirs2-graph" }
scirs2-transform = { version = "0.1.0-alpha.4", path = "./scirs2-transform" }
scirs2-metrics = { version = "0.1.0-alpha.4", path = "./scirs2-metrics", default-features = false }
scirs2-text = { version = "0.1.0-alpha.4", path = "./scirs2-text" }
scirs2-vision = { version = "0.1.0-alpha.4", path = "./scirs2-vision" }
scirs2-series = { version = "0.1.0-alpha.4", path = "./scirs2-series" }
scirs2-autograd = { version = "0.1.0-alpha.4", path = "./scirs2-autograd" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.bench]
opt-level = 3
