[workspace]
members = [
    "scirs2",
    "scirs2-core",
    "scirs2-linalg",
    "scirs2-integrate",
    "scirs2-fft",
    "scirs2-signal",
    "scirs2-sparse",
    "scirs2-spatial",
    "scirs2-ndimage",
    "scirs2-io",
    "scirs2-datasets",
    # AI/ML modules - Core working modules only
    "scirs2-neural",
    "scirs2-graph",
    "scirs2-transform",
    "scirs2-metrics",
    "scirs2-text",
    "scirs2-vision",
    "scirs2-series",
    "scirs2-autograd",
    # Benchmarking suite
    "benches",
    
    # Temporarily disabled due to compilation errors:
    "scirs2-interpolate", # Needs debugging - enabling to fix
    # "scirs2-optimize", # 518+ compilation errors
    "scirs2-stats", # Working on fixing compilation errors  
    "scirs2-cluster", # Re-enabled after fixing workspace conflict
    "scirs2-optim", # Compilation errors - enabling to fix
    "scirs2-special", # Compilation errors - enabling to fix
]
resolver = "2"

[workspace.metadata.nox]
bench_crates = ["scirs2-ndimage"]

[workspace.lints.rust]
unused_variables = "allow"
unused_imports = "allow"
mismatched_lifetime_syntaxes = "allow"
dead_code = "allow"
unpredictable_function_pointer_comparisons = "allow"
unknown_lints = "allow"

[workspace.package]
version = "0.1.0-beta.1"
edition = "2021"
authors = ["SciRS2 Team"]
description = "A Rust port of SciPy with AI/ML extensions - Scientific Computing and AI Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["scientific", "mathematics", "science", "scipy", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms", "ai"]

[workspace.dependencies]
# Core array computing
ndarray = { version = "0.16.1", default-features = false, features = ["std", "serde", "rayon"] }
ndarray-stats = "0.6.0"
ndarray-stats-05 = { package = "ndarray-stats", version = "0.5.0" }
ndarray-rand = "0.15.0"
ndarray-rand-014 = { package = "ndarray-rand", version = "0.14.0" }
# Numerical libraries
num-traits = "0.2.19"
num-complex = "0.4.6"
num-integer = "0.1.46"

# Parallelization and performance
rayon = "1.10.0"
wide = "0.7.33"  # SIMD acceleration library
num_cpus = "1.16.0"

# Random number generation
rand = "0.9.2"
rand_distr = "0.5.1"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rand_chacha = "0.9.0"
fastrand = "2.0.1"

# Development and testing
thiserror = "1.0.69"
approx = "0.5.1"
criterion = "0.6.0"
once_cell = "1.21.3"
tempfile = "3.20.0"
tokio-test = "0.4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
chrono = "0.4.41"

# Python bindings (optional)
pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize"] }
numpy = { version = "0.25.0" }

# Linear algebra and math (heavy dependencies - minimize features)
nalgebra = { version = "0.33.2", default-features = false }
rustfft = { version = "6.4.0", default-features = false }
argmin = { version = "0.10.0", default-features = false }
sprs = { version = "0.11.3", default-features = false }

# Platform-specific BLAS/LAPACK backends
# ndarray-linalg with different backends - choose only one per platform
ndarray-linalg = { version = "0.17.0", default-features = false }

# BLAS backends (mutually exclusive) - used conditionally by individual crates
openblas-src = { version = "0.10.11", features = ["cblas", "lapacke"], default-features = false }
blas-src = { version = "0.10", default-features = false }
cblas-sys = { version = "0.1.4", default-features = false }
blas = { version = "0.23.0", default-features = false }
# NOTE: intel-mkl-src removed to avoid conflicts with openblas-src

# Serialization and data handling
either = "1.15.0"
csv = "1.3.1"
image = "0.25.6"
image-025 = { package = "image", version = "0.25.6", features = ["jpeg", "png", "gif"] }

# IO and file handling
flate2 = "1.0"
blake3 = "1.8.2"
regex = "1.11.1"
libc = "0.2.174"
cached = "0.54.0"
byteorder = "1.4"
rmp-serde = "1.3"
lz4 = "1.28"
zstd = "0.13.3"
bzip2 = "0.5.0"
sha2 = "0.10"
crc32fast = "1.4"
hex = "0.4"
digest = "0.10"
data-encoding = "2.6"
glob = "0.3"
zip = "2.2"
dirs = "6.0.0"
urlencoding = "2.1"
url = "2.5.0"
cron = "0.12"

# ML specific
tokenizers = "0.21.2"
autograd = "1.1.1"
smallvec = "1.15.1"
uuid = { version = "1.17.0", features = ["v4"] }
rustc-hash = "2.1.1"
matrixmultiply = "0.3.9"
num = "0.4.3"
special = "0.10.2"
special-11 = { package = "special", version = "0.11.4" }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
lazy_static = "1.5"
statrs = "0.18.0"
petgraph = "0.8.2"
itertools = "0.14"

# Additional dependencies for modules
half = { version = "2.6.0", features = ["num-traits", "serde", "alloc"] }
crossbeam = { version = "0.8.4" }
crossbeam-utils = { version = "0.8.21" }
crossbeam-deque = { version = "0.8.6" }
crossbeam-channel = { version = "0.5.13" }
memmap2 = { version = "0.9.5" }
bytemuck = { version = "1.21", features = ["derive"] }
snap = { version = "1.1.1" }
brotli = { version = "7.0.0" }
cranelift-module = { version = "0.121.1" }
cranelift-jit = { version = "0.121.1" }
cranelift-frontend = { version = "0.121.1" }
plotly = { version = "0.12.1" }
plotters = { version = "0.3.7" }
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Math libraries
libm = "0.2"
array-init = "2.1.0"
netcdf3 = "0.5.2"
sobol = "1.0.2"
halton = "0.2.1"
ordered-float = "3.9.2"
kamadak-exif = "0.5"
hdf5 = "0.8.1"
friedrich = "0.5.0"
ureq = "2.9"
qhull = "0.4.0"
parking_lot = "0.12.4"
serde_yaml = "0.9"
toml = "0.8"
ciborium = "0.2"
serde_cbor = "0.11.2"

# Arbitrary precision libraries
num-bigint = "0.4.6"
num-rational = "0.4.2"
rug = { version = "1.26.0", features = ["integer", "float", "rational", "complex"], default-features = false }
gmp-mpfr-sys = { version = "1.6.5", default-features = false }

# Arrow dependencies commented out due to compatibility issues with chrono
# arrow = "54.0.0"
# arrow-array = "54.0.0"
# arrow-buffer = "54.0.0"
# arrow-cast = "54.0.0"
# arrow-data = "54.0.0"
# arrow-schema = "54.0.0"
# arrow-select = "54.0.0"
# arrow-arith = "54.0.0"

# Async dependencies
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.83"

# Logging
log = "0.4"

# System information
sysinfo = "0.35.2"

# GPU backends
metal = "0.31.0"
objc2-metal-performance-shaders = "0.3.0"
cudarc = { version = "0.12", features = ["cuda-12000"] }
opencl3 = { version = "0.11" }
wgpu = { version = "22.1" }
pollster = { version = "0.4" }

# Development and testing additions
ctor = { version = "0.2" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }
instant = { version = "0.1" }
proptest = { version = "1.4.0" }

# Data structures
indexmap = { version = "2.7" }
ahash = { version = "0.8" }

# Database drivers
rusqlite = { version = "0.32" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
duckdb = { version = "0.10" }
mongodb = { version = "2.8" }
redis = { version = "0.24" }

# Real-time streaming
tokio-tungstenite = { version = "0.21" }
rumqttc = { version = "0.24" }
eventsource-client = { version = "0.12" }
tonic = { version = "0.11" }
prost = { version = "0.12" }

# CLI and utilities
clap = { version = "4.4" }
tar = { version = "0.4" }

# Cryptography
rsa = { version = "0.9" }
x509-parser = { version = "0.16" }

# WASM support
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = { version = "0.6" }
console_error_panic_hook = { version = "0.1" }

# Machine learning
tch = { version = "0.13" }

# Monitoring
prometheus = { version = "0.13" }

# GUI libraries
egui = { version = "0.27" }
eframe = { version = "0.27" }

# Python integration (optional)

# Base scirs2 crates
scirs2-core = { version = "0.1.0-beta.1", path = "./scirs2-core" }
scirs2 = { version = "0.1.0-beta.1", path = "./scirs2", default-features = false }
scirs2-linalg = { version = "0.1.0-beta.1", path = "./scirs2-linalg" }
scirs2-integrate = { version = "0.1.0-beta.1", path = "./scirs2-integrate" }
scirs2-interpolate = { version = "0.1.0-beta.1", path = "./scirs2-interpolate" }
scirs2-optimize = { version = "0.1.0-beta.1", path = "./scirs2-optimize" }
scirs2-fft = { version = "0.1.0-beta.1", path = "./scirs2-fft" }
scirs2-stats = { version = "0.1.0-beta.1", path = "./scirs2-stats" }
scirs2-special = { version = "0.1.0-beta.1", path = "./scirs2-special" }
scirs2-signal = { version = "0.1.0-beta.1", path = "./scirs2-signal" }
scirs2-sparse = { version = "0.1.0-beta.1", path = "./scirs2-sparse" }
scirs2-spatial = { version = "0.1.0-beta.1", path = "./scirs2-spatial" }

# Advanced modules
scirs2-cluster = { version = "0.1.0-beta.1", path = "./scirs2-cluster" }
scirs2-ndimage = { version = "0.1.0-beta.1", path = "./scirs2-ndimage" }
scirs2-io = { version = "0.1.0-beta.1", path = "./scirs2-io" }
scirs2-datasets = { version = "0.1.0-beta.1", path = "./scirs2-datasets" }

# AI/ML modules
scirs2-neural = { version = "0.1.0-beta.1", path = "./scirs2-neural" }
scirs2-optim = { version = "0.1.0-beta.1", path = "./scirs2-optim" }
scirs2-graph = { version = "0.1.0-beta.1", path = "./scirs2-graph" }
scirs2-transform = { version = "0.1.0-beta.1", path = "./scirs2-transform" }
scirs2-metrics = { version = "0.1.0-beta.1", path = "./scirs2-metrics", default-features = false }
scirs2-text = { version = "0.1.0-beta.1", path = "./scirs2-text" }
scirs2-vision = { version = "0.1.0-beta.1", path = "./scirs2-vision" }
scirs2-series = { version = "0.1.0-beta.1", path = "./scirs2-series" }
scirs2-autograd = { version = "0.1.0-beta.1", path = "./scirs2-autograd" }


[profile.release]
opt-level = 3
lto = false
codegen-units = 1

[profile.dev]
opt-level = 0  # Reduced to prevent memory exhaustion

[profile.test]
opt-level = 0  # Reduced to prevent memory exhaustion during compilation

[profile.bench]
opt-level = 3

