[package]
name = "scirs2-autograd"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Automatic differentiation module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["autograd", "machine-learning", "scientific", "ai", "ml"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
thiserror = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
libc = { workspace = true }
matrixmultiply = { workspace = true }
num = { workspace = true }
special = { workspace = true }
array-init = { workspace = true }
scirs2-core = { workspace = true }
# Remove dependency on scirs2-linalg to avoid circular dependency
ndarray-linalg = { workspace = true }

# BLAS dependencies - feature-gated
blas-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }
cblas-sys = { workspace = true, optional = true }

[features]
default = []
blas = []
intel-mkl = ["intel-mkl-src", "cblas-sys"]
accelerate = ["blas-src/accelerate", "cblas-sys"]
openblas = ["blas-src/openblas", "cblas-sys"]
mkl = ["intel-mkl-src", "cblas-sys"]

[[example]]
name = "basic_autograd"
path = "examples/basic_autograd.rs"

[lib]
doctest = false