[package]
name = "scirs2-autograd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Automatic differentiation module for SciRS2 (scirs2-autograd)"
license.workspace = true
repository.workspace = true
keywords = ["autograd", "machine-learning", "scientific", "ai", "ml"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
# rayon = { workspace = true }  # Now use scirs2-core parallel abstractions
rand = { workspace = true }
rand_core = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
thiserror = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
libc = { workspace = true }
matrixmultiply = { workspace = true }
num = { workspace = true }
special = { workspace = true }
array-init = { workspace = true }
scirs2-core = { workspace = true, features = ["parallel"] }
# Remove dependency on scirs2-linalg to avoid circular dependency
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, default-features = false }
toml = { workspace = true }
# cblas-sys removed - all BLAS operations now go through scirs2-core

[features]
default = []
blas = ["scirs2-core/linalg"]
openblas = ["scirs2-core/openblas"] 
netlib = ["scirs2-core/netlib"]
# intel-mkl feature removed from scirs2-core to avoid conflicts
# mkl = ["intel-mkl"]  # Legacy feature compatibility removed
simd = ["scirs2-core/simd"]

[[example]]
name = "basic_autograd"
path = "examples/basic_autograd.rs"

[[example]]
name = "simd_acceleration_test"
path = "examples/simd_acceleration_test.rs"
required-features = ["simd"]

[lib]
doctest = false