[package]
name = "scirs2-cluster"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Clustering algorithms module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["clustering", "scientific", "scipy", "numerical", "kmeans"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-spatial = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
rayon = { workspace = true }
